changes to jeju-intro section

--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
                     <a href="">View All Products</a>
             </div>
             <div class="imgBox">
-                <img src="./img/jejuisland.jpeg" class="jeju-pic" alt="jejuisland">
+                <img src="./img/jejuisland.jpeg" class="jeju-cafe-pic" alt="jejuisland">
             </div>
         </div>
+        <ul class="coffee-icon">
+            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_soem_andsseom.jpeg')" alt="coffee" id="coffee"></li>
+            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_bomnal.jpeg')" alt="coffee" id="coffee"></li>
+            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee" id="coffee"></li>
+        </ul>
     </section>
     <!-- About Section -->
     <section id="about" data-aos="zoom-in">
