changed cafe text and link js

--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
         <div class="content">
             <div class="cafe-textbox">
                 <h2>That's What <br><span>I like</span></h2>
-                <p> LOREM IPSUM GENERATOR
+                <p id="cafe-text"> LOREM IPSUM GENERATOR
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="">View All Products</a>
+                <a id="cafe-link" href="">View All Products</a>
             </div>
             <div class="imgBox">
                 <img src="./img/jejuisland.jpeg" class="jeju-cafe-pic" alt="jejuisland">
             </div>
         </div>
         <ul class="coffee-icon">
-            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_soem_andsseom.jpeg')" alt="coffee" id="coffee"></li>
-            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_bomnal.jpeg')" alt="coffee" id="coffee"></li>
-            <li><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee" id="coffee"></li>
+            <li id="cafe1"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_soem_andsseom.jpeg')" alt="coffee" id="coffee"></li>
+            <li id="cafe2"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_bomnal.jpeg')" alt="coffee" id="coffee"></li>
+            <li id="cafe3"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee" id="coffee"></li>
         </ul>
     </section>
     <!-- About Section -->
