made changes to second section and intro area

--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@
     </section>
     <!-- Brief Intro Typomotion -->
     <section>
-        <h1>let me introduce you to Jejub v</h1>
+        <h1>Jeju Cafes</h1>
     </section>
     <!-- Jeju Cafe Introduction -->
     <section>
         <div class="content">
             <div class="cafe-textbox">
                 <h2>That's What <br><span>I like</span></h2>
-                <p id="cafe-text"> LOREM IPSUM GENERATOR
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a id="cafe-link" href="">View All Products</a>
+                <p id="cafe-text">When you come to Jeju Island, there are many things to look around, but cafes are the most intriguing part of the journey. There are top 3's that people selected in 2021 and you can see their names and description by clicking on the coffee icon below. If you want just see all the list of popular cafes in Jeju island, you can click on "GO TO WEBSITE"</p>
+                <a id="cafe-link" href="https://www.tripadvisor.com/Restaurants-g297885-c8-Jeju_Jeju_Island.html">Go To Website</a>
             </div>
             <div class="imgBox">
-                <img src="./img/jejuisland.jpeg" class="jeju-cafe-pic" alt="jejuisland">
+                <img src="./img/jejuisland.jpeg" class="jeju-cafe-pic" alt="jeju-island">
             </div>
         </div>
         <ul class="coffee-icon">
