--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
     </section>
     <!-- Brief Intro Typomotion -->
     <section>
-        <h1>Jeju Cafes</h1>
+        <h1>
+            <span>J</span>
+            <span>e</span>
+            <span>j</span>
+            <span>u&nbsp&nbsp</span>
+            <span>C</span>
+            <span>a</span>
+            <span>f</span>
+            <span>e</span>
+            <span>s</span>
+        </h1>
     </section>
     <!-- Jeju Cafe Introduction -->
     <section>
