made changes to Jeju Cafe title animation and added some aos animation to 2nd and 3rd section

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <h2>2. a bar or nightclub. (North American)</h2>
         </div>
         <!-- <div class='scroll-container' data-aos="fade-in" data-aos-delay="4000"> -->
-            <div class="scroll-down"> 
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+        <div class="scroll-down">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </section>
     <!-- Brief Intro Typomotion -->
-    <section>
-        <h1>
+    <section data-aos='fade-in'>
+        <h1 class="cover">
             <span>J</span>
             <span>e</span>
             <span>j</span>
@@ -61,21 +61,28 @@
         </h1>
     </section>
     <!-- Jeju Cafe Introduction -->
-    <section>
+    <section data-aos='fade-in'>
         <div class="content">
             <div class="cafe-textbox">
                 <h2>That's What <br><span>I like</span></h2>
-                <p id="cafe-text">When you come to Jeju Island, there are many things to look around, but cafes are the most intriguing part of the journey. There are top 3's that people selected in 2021 and you can see their names and description by clicking on the coffee icon below. If you want just see all the list of popular cafes in Jeju island, you can click on "GO TO WEBSITE"</p>
-                <a id="cafe-link" href="https://www.tripadvisor.com/Restaurants-g297885-c8-Jeju_Jeju_Island.html">Go To Website</a>
+                <p id="cafe-text">When you come to Jeju Island, there are many things to look around, but cafes are the
+                    most intriguing part of the journey. There are top 3's that people selected in 2021 and you can see
+                    their names and description by clicking on the coffee icon below. If you want just see all the list
+                    of popular cafes in Jeju island, you can click on "GO TO WEBSITE"</p>
+                <a id="cafe-link" href="https://www.tripadvisor.com/Restaurants-g297885-c8-Jeju_Jeju_Island.html">Go To
+                    Website</a>
             </div>
             <div class="imgBox">
                 <img src="./img/jejuisland.jpeg" class="jeju-cafe-pic" alt="jeju-island">
             </div>
         </div>
         <ul class="coffee-icon">
-            <li id="cafe1"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_soem_andsseom.jpeg')" alt="coffee" id="coffee"></li>
-            <li id="cafe2"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_bomnal.jpeg')" alt="coffee" id="coffee"></li>
-            <li id="cafe3"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee" id="coffee"></li>
+            <li id="cafe1"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_soem_andsseom.jpeg')"
+                    alt="coffee" id="coffee"></li>
+            <li id="cafe2"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_bomnal.jpeg')" alt="coffee"
+                    id="coffee"></li>
+            <li id="cafe3"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee"
+                    id="coffee"></li>
         </ul>
     </section>
     <!-- About Section -->
