--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Dark Mode</title>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Jeju Café</title>
+    <link rel="icon" type="image/png" href="./img/coffee.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
     <!-- AOS CSS -->
@@ -26,15 +26,15 @@
     <!-- Navigation -->
     <nav id="nav" data-aos="fade-in" data-aos-delay="2000">
         <a href="#home">HOME</a>
-        <a href="#about">ABOUT</a>
-        <a href="#project">PROJECTS</a>
+        <a href="#title">TITLE</a>
+        <a href="#cafes">CAFE</a>
         <a href="#contact">CONTACT</a>
     </nav>
     <!-- Home Section -->
     <section id="home">
         <div class="title-group" style='text-align: left;' data-aos="fade-up" data-aos-duration="3000">
             <!-- <h1>Cafe</h1> -->
-            <span style="font-family: Kaushan Script, sans-serif; font-size: 5em; margin-bottom: 0;">Cafe </span>
+            <span style="font-family: Kaushan Script, sans-serif; font-size: 5em; margin-bottom: 0;">Café</span>
             <span style="font-family: Kaushan Script, sans-serif; font-size: 3em; margin-bottom: 0;">(café, 카페)</span>
             <h2>1. a small restaurant selling light meals and drinks.</h2>
             <h2>2. a bar or nightclub. (North American)</h2>
@@ -47,7 +47,7 @@
         </div>
     </section>
     <!-- Brief Intro Typomotion -->
-    <section data-aos='fade-in'>
+    <section id="title" data-aos='fade-in'>
         <h1 class="cover">
             <span>J</span>
             <span>e</span>
@@ -56,12 +56,12 @@
             <span>C</span>
             <span>a</span>
             <span>f</span>
-            <span>e</span>
+            <span>é</span>
             <span>s</span>
         </h1>
     </section>
     <!-- Jeju Cafe Introduction -->
-    <section data-aos='fade-in'>
+    <section id="cafes" data-aos='fade-in'>
         <div class="content">
             <div class="cafe-textbox">
                 <h2>That's What <br><span>I like</span></h2>
@@ -84,42 +84,6 @@
             <li id="cafe3"><img src="./img/coffee.png" onclick="imgSlider('./img/jeju_cafe_groov.jpeg')" alt="coffee"
                     id="coffee"></li>
         </ul>
-    </section>
-    <!-- About Section -->
-    <section id="about" data-aos="zoom-in">
-        <h1>Undraw Illustrations</h1>
-        <div class="about-container">
-            <div class="image-container">
-                <h2>Web Innovation</h2>
-                <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
-            </div>
-            <div class="image-container">
-                <h2>Web Innovation</h2>
-                <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Coder" id="image2">
-            </div>
-            <div class="image-container">
-                <h2>Web Innovation</h2>
-                <img src="img/undraw_conceptual_idea_light.svg" alt="Idea" id="image3">
-            </div>
-        </div>
-    </section>
-    <!-- Project Section -->
-    <section id="project">
-        <h1>Buttons</h1>
-        <div class="buttons">
-            <button class="primary">Primary</button>
-            <button class="secondary">Secondary</button>
-            <button class="primary" disabled>Disabled</button>
-            <button class="outline">Outline</button>
-            <button class="secondary outline">Alt Outline</button>
-            <button class="outline" disabled>Disabled</button>
-        </div>
-        <div class="text-box" id="text-box">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, eos deserunt voluptates eligendi nam
-                dolorem omnis tenetur nostrum aspernatur beatae illum, repudiandae provident maiores alias facilis sed
-                cumque odit inventore.</p>
-        </div>
-    </section>
     <!-- Contact Section -->
     <section id="contact">
         <div class="social-icons">
